--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sock-radio",
+  "homepage": "https://sock.rocks/test/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
